# pico-picture

./: .gitignore  README.md  TECHNICAL_DEBT.md  config.py.template  pico-picture.py
PicoWeather/: PicoWeather.pro  PicoWeather.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
PicturePoster/: PicturePoster.pro  PicturePoster.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
pico-weather/: ARCHITECTURE.md  README.md  REQUIREMENTS.md  ROADMAP.md  simulator.py
pico-weather-rs/: Cargo.toml  README.md
pico-weather-rs/src/: index.html  main.rs
pico-weather/pico/: config_example.json  display.py  fonts.py  main.py  renderer.py  weather.py  wifi.py
pico-weather/tests/: hal_desktop.py  requirements.txt  sample_rainy.json  sample_response.json  test_display.py  test_integration.py  test_memory.py  test_renderer.py  test_weather.py
pico-weather/tools/: generate_font.py
